--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,11 +38,14 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@types/jquery": "^3.5.33",
+    "bootstrap": "^5.3.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "datatables.net-bs5": "^2.3.4",
     "datatables.net-dt": "^2.3.4",
     "embla-carousel-react": "^8.6.0",
+    "face-api.js": "^0.22.2",
     "image-extensions": "^1.1.0",
     "input-otp": "^1.4.2",
     "jquery": "^3.7.1",
