--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.1.0",
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.1.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -53,6 +57,7 @@
     "lucide-react": "^0.487.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
+    "react-bootstrap": "^2.10.10",
     "react-day-picker": "^9.11.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.63.0",
