--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,8 +41,10 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@types/html2canvas": "^0.5.35",
     "@types/jquery": "^3.5.33",
     "bootstrap": "^5.3.8",
+    "canvg": "^4.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -50,10 +52,12 @@
     "datatables.net-dt": "^2.3.4",
     "embla-carousel-react": "^8.6.0",
     "face-api.js": "^0.22.2",
+    "html2canvas": "^1.4.1",
     "image-extensions": "^1.1.0",
     "input-otp": "^1.4.2",
     "jquery": "^3.7.1",
     "jquery-validation": "^1.21.0",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.487.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
