--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,8 @@
     "nodemailer": "^7.0.9",
     "react-toastify": "^11.0.5",
     "sharp": "^0.34.4",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "toaster": "^0.1.2",
     "uuid": "^13.0.0"
   },
