--- a/frontend/package.json
+++ b/frontend/package.json
@@ -75,6 +75,7 @@
     "recharts": "^2.15.4",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
+    "sweetalert2": "^11.26.3",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2"
   },
