--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,6 +59,7 @@
     "jquery": "^3.7.1",
     "jquery-validation": "^1.21.0",
     "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.487.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
@@ -77,13 +78,16 @@
     "sonner": "^2.0.7",
     "sweetalert2": "^11.26.3",
     "tailwind-merge": "^3.3.1",
-    "vaul": "^1.1.2"
+    "vaul": "^1.1.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "@types/xlsx": "^0.0.35",
     "@vitejs/plugin-react": "^5.0.3",
     "@vitejs/plugin-react-swc": "^4.1.0",
     "autoprefixer": "^10.4.21",
