--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,6 @@
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-menubar": "^1.1.16",
@@ -36,7 +35,6 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slider": "^1.3.6",
-    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
@@ -47,8 +45,6 @@
     "@types/jquery": "^3.5.33",
     "bootstrap": "^5.3.8",
     "canvg": "^4.0.3",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "datatables.net-bs5": "^2.3.4",
     "datatables.net-dt": "^2.3.4",
@@ -63,7 +59,6 @@
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.487.0",
-    "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-day-picker": "^9.11.0",
@@ -79,12 +74,13 @@
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
     "sweetalert2": "^11.26.3",
-    "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-slot": "^1.2.4",
     "@types/jspdf": "^1.3.3",
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.13",
@@ -93,12 +89,17 @@
     "@vitejs/plugin-react": "^5.0.3",
     "@vitejs/plugin-react-swc": "^4.1.0",
     "autoprefixer": "^10.4.21",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.13",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.17",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.44.0",
     "vite": "^7.1.7"
