--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.2.1",
     "file-type": "^21.0.0",
+    "firebase-admin": "^13.6.0",
     "helmet": "^7.1.0",
     "image-size": "^2.0.2",
     "jimp": "^1.6.0",
