--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "face-api.js": "^0.22.2",
+    "firebase": "^12.5.0",
     "html2canvas": "^1.4.1",
     "image-extensions": "^1.1.0",
     "input-otp": "^1.4.2",
